--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,6 +10,9 @@
     </div>
 
     <div fxFlex>
+        <!--
+            Note that I am using the latest version of Angular and as such, md-* tags are replaced by mat-* tags.
+        -->
         <mat-grid-list cols="2" rowHeight="200px">
             <mat-grid-tile *ngFor="let dish of dishes">
                 <img height="200px" src={{dish.image}} alt={{dish.name}}>
@@ -21,20 +24,6 @@
     </div>
 
     <div fxFlex *ngIf="selectedDish">
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>
-                    <h3>{{selectedDish.name | uppercase}}</h3>
-                </mat-card-title>
-            </mat-card-header>
-            <img mat-card-image src={{selectedDish.image}} alt={{selectedDish.name}}>
-            <mat-card-content>
-                <p>{{selectedDish.description}}</p>
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
-            </mat-card-actions>
-        </mat-card>
+        <app-dishdetail></app-dishdetail>
     </div>
 </div>
