--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
             Note that I am using the latest version of Angular and as such, md-* tags are replaced by mat-* tags.
         -->
         <mat-grid-list cols="2" rowHeight="200px">
-            <mat-grid-tile *ngFor="let dish of dishes">
+            <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
                 <img height="200px" src={{dish.image}} alt={{dish.name}}>
                 <mat-grid-tile-footer>
                     <h1 mat-line>{{dish.name | uppercase}}</h1>
@@ -24,6 +24,6 @@
     </div>
 
     <div fxFlex *ngIf="selectedDish">
-        <app-dishdetail></app-dishdetail>
+        <app-dishdetail [dish]="selectedDish"></app-dishdetail>
     </div>
 </div>
