Fix for mat-form-field color

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,8 +9,7 @@
 <form novalidate #loginForm="ngForm" (ngSubmit)="onSubmit()">
     <mat-dialog-content>
     <p>
-      <!-- <mat-form-field outline="{{username.invalid && !username.pristine ? 'warn' : 'primary'}}"> -->
-      <mat-form-field> 
+      <mat-form-field color="{{username.invalid && !username.pristine ? 'warn' : 'primary'}}"> 
         <input matInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username" #username="ngModel" required>
         <mat-hint>
             <span [hidden]="username.pristine">
@@ -18,8 +17,7 @@
             </span>
         </mat-hint>
       </mat-form-field>
-      <!-- <mat-form-field outline="{{password.invalid && !password.pristine ? 'warn' : 'primary'}}"> -->
-      <mat-form-field>
+      <mat-form-field color="{{password.invalid && !password.pristine ? 'warn' : 'primary'}}">
         <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required>
         <mat-hint>
             <span [hidden]="password.pristine">
