--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,9 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="dish">
+    <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
+</div>
 
 <mat-card *ngIf="promotion" fxFlex>
   <mat-card-header>
@@ -36,6 +39,9 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="promotion">
+    <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
+</div>
 
 <mat-card *ngIf="leader" fxFlex>
   <mat-card-header>
@@ -49,5 +55,8 @@
     <p>{{leader.description}}</p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="leader">
+    <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
+</div>
 
 </div>
