--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -58,7 +58,7 @@
       </div>
 
 
-        <div fxFlex>
+        <div fxFlex *ngIf="leaders">
           <h2>Corporate Leadership</h2>
           <mat-list>
               <mat-list-item *ngFor="let leader of leaders">
@@ -68,5 +68,8 @@
                   <p matLine>{{leader.description}}</p>
               </mat-list-item>
           </mat-list>
+       </div>
+       <div>
+           <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
        </div>
 </div>
