--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -28,6 +28,9 @@
                 </mat-card-actions>
             </mat-card>
         </div>
+        <div [hidden]="dish">
+            <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
+        </div>
     </div>
 
     <div fxFlex="40">
@@ -46,6 +49,9 @@
                     </blockquote>
                 </mat-card-content>
             </mat-card>
+        </div>
+        <div [hidden]="dish">
+            <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
         </div>
     </div>
 </div>
