--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 
-    <div fxFlex>
+    <div fxFlex *ngIf="dishes">
         <!--
             Note that I am using the latest version of Angular and as such, md-* tags are replaced by mat-* tags.
         -->
@@ -21,5 +21,8 @@
                 </mat-grid-tile-footer>
             </mat-grid-tile>
         </mat-grid-list>
+    </div>
+    <div [hidden]="dishes">
+        <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
     </div>
 </div>
