--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,8 +6,8 @@
      fxLayoutGap="10px" 
      fxLayoutGap.xs="0">
 
-    <div fxFlex="40">
-        <div fxFlex *ngIf="dish">
+    <div fxFlex="40" *ngIf="dish">
+        <div fxFlex> 
             <!--
                 Note that I am using the latest version of Angular and as such, md-* tags are replaced by mat-* tags.
             -->
@@ -22,9 +22,11 @@
                     <p>{{dish.description}}</p>
                 </mat-card-content>
                 <mat-card-actions>
+                    <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
                     <button mat-button (click)="goBack()">BACK</button>
                     <button mat-button>LIKE</button>
                     <button mat-button>SHARE</button>
+                    <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
                 </mat-card-actions>
             </mat-card>
         </div>
