--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -42,35 +42,36 @@
 
         <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
           <p>
-            <mat-form-field class="half-width" color="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
+            <mat-form-field class="half-width" color="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
               <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
               <mat-hint>
-                <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">
-                  firstname is required</span>
+                <span [hidden]="!(formErrors.firstname)">
+                  {{formErrors.firstname}}
+                </span>
               </mat-hint>
             </mat-form-field>
-            <mat-form-field class="half-width" color="{{(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched) ? 'warn' : 'primary'}}">
+            <mat-form-field class="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
               <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
               <mat-hint>
-                <span [hidden]="!(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched)">
-                  lastname is required</span>
+                <span [hidden]="!(formErrors.lastname)">
+                  {{formErrors.lastname}}
+                </span>
               </mat-hint>
             </mat-form-field>
           </p>
           <p>
-            <mat-form-field class="half-width" color="{{(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched) ? 'warn' : 'primary'}}">
+            <mat-form-field class="{{(formErrors.telnum) ? 'warn' : 'primary'}}">
               <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" required>
               <mat-hint>
-                <span [hidden]="!(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched)">
-                  telnum is required</span>
+                <span [hidden]="!(formErrors.telnum)">
+                  {{formErrors.telnum}}
+                </span>
               </mat-hint>
             </mat-form-field>
-            <mat-form-field class="half-width" color="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched) ? 'warn' : 'primary'}}">
+            <mat-form-field class="half-width" color="{{(formErrors.email) ? 'warn' : 'primary'}}">
               <input matInput formControlName="email" placeholder="Email" type="email" required>
-              <mat-hint>
-                <span [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">
-                  email is required</span>
-              </mat-hint>
+                <span [hidden]="!(formErrors.email)">
+                  {{formErrors.email}}</span>
             </mat-form-field>
           </p>
           <table class="form-size">
