--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -82,8 +82,12 @@
                 <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
             </form>
         </div>
-        <div [hidden]="dish">
+        <div [hidden]="dish || errMess">
             <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
+        </div>
+        <div *ngIf="errMess">
+           <h2>Error</h2>
+           <h4>{{errMess}}</h4>
         </div>
     </div>
 </div>
