--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,8 +22,12 @@
     </p>
   </mat-card-content>
 </mat-card>
-<div [hidden]="dish">
+<div [hidden]="dish || dishErrMess">
     <mat-spinner></mat-spinner><h4>Loading ... Please Wait</h4>
+</div>
+<div *ngIf="dishErrMess">
+    <h2>Error</h2>
+    <h4>{{dishErrMess}}</h4>
 </div>
 
 <mat-card *ngIf="promotion" fxFlex>
