--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
             Note that I am using the latest version of Angular and as such, md-* tags are replaced by mat-* tags.
         -->
         <mat-grid-list cols="2" rowHeight="200px">
-            <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]">
+            <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]" appHighlight>
                 <img height="200px" src="{{BaseURL + dish.image}}" alt={{dish.name}}>
                 <mat-grid-tile-footer>
                     <h1 mat-line>{{dish.name | uppercase}}</h1>
