--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 
-    <div fxFlex *ngIf="dishes">
+    <div fxFlex *ngIf="dishes" [@expand]>
         <!--
             Note that I am using the latest version of Angular and as such, md-* tags are replaced by mat-* tags.
         -->
