--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
      fxLayoutGap.xs="0">
 
     <div fxFlex="40"> <!-- Top level div for dish detail -->
-        <div fxFlex *ngIf="dish" [@visibility]="visibility"> <!-- Dish images -->
+        <div fxFlex *ngIf="dish" [@visibility]="visibility" [@expand]> <!-- Dish images -->
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>
@@ -27,7 +27,7 @@
                 </mat-card-actions>
             </mat-card>
         </div>
-        <div fxFlex *ngIf="dish" [@visibility]="visibility">
+        <div fxFlex *ngIf="dish" [@visibility]="visibility" [@expand]>
             <mat-list>
                 <h3>COMMENTS</h3>
                 <div *ngFor="let comment of dish.comments">
